@@ -7,7 +7,7 @@
 ui_print() {
   if ($BOOTMODE); then
     echo "$1"
-  else 
+  else
     echo -n -e "ui_print $1\n" >> /proc/self/fd/$OUTFD
     echo -n -e "ui_print\n" >> /proc/self/fd/$OUTFD
   fi
@@ -342,8 +342,7 @@ fi
 COMMENT_HTC_VENDOR
 
 # deep_buffer & raw removal in audio_policy.conf for max compatibility
-# Only use "setporp audio.deep_buffer.media false" in post-fs-data.sh
-# is not enough to get v4a process with SoundCloud
+# setprop in post-fs-data.sh may not work well on some devices.
 if [ -f "/system/etc/audio_policy.conf" ]; then
   cp -af /system/etc/audio_policy.conf $MODPATH/system/etc/audio_policy.conf
   sed -i '/deep_buffer {/,/}/d' $MODPATH/system/etc/audio_policy.conf
@@ -370,23 +369,23 @@ if [ -f "/vendor/etc/audio_policy.conf" ]; then
 fi
 COMMENT_VENDOR_POLICY
 
-# DISABLED
-<<COMMENT_BP
-# build.prop patch for ViPER|Audio™ Stock
-BP=/system/build.prop
-mkdir -p $CACHEMODPATH/system
-cp -af $BP $CACHEMODPATH$BP
-echo " " >> $CACHEMODPATH$BP
-echo "## ViPER|Audio™ ##" >> $CACHEMODPATH$BP
-echo " " >> $CACHEMODPATH$BP
-for mod in $INSTALLER/misc;do
-  for prop in `cat $mod`;do
-    export newprop=$(echo ${prop} | cut -d '=' -f1)
-    sed -i "/${newprop}/d" $CACHEMODPATH$BP
-    echo $prop >> $CACHEMODPATH$BP
+# build.prop patch for ViPER4Android Stock by replacing build.prop.
+# setprop in post-fs-data.sh may not work well on some devices.
+if ($CACHEMOD); then
+  BP=/system/build.prop
+  mkdir -p $CACHEMODPATH/system
+  cp -af $BP $CACHEMODPATH$BP
+  echo " " >> $CACHEMODPATH$BP
+  echo "## ViPER4Android ##" >> $CACHEMODPATH$BP
+  echo " " >> $CACHEMODPATH$BP
+  for mod in $INSTALLER/misc;do
+    for prop in `cat $mod`;do
+      export newprop=$(echo ${prop} | cut -d '=' -f1)
+      sed -i "/${newprop}/d" $CACHEMODPATH$BP
+      echo $prop >> $CACHEMODPATH$BP
+    done
   done
-done
-COMMENT_BP
+fi
 
 # Handle replace folders
 for TARGET in $REPLACE; do
@@ -403,6 +402,9 @@ fi
 
 # Module info
 cp -af $INSTALLER/module.prop $MODPATH/module.prop
+if ($CACHEMOD); then
+  cp -af $INSTALLER/module.prop $CACHEMODPATH/module.prop
+fi
 if ($BOOTMODE); then
   # Update info for Magisk Manager
   mktouch /magisk/$MODID/update
@@ -411,7 +413,7 @@ fi
 
 # post-fs mode scripts
 if ($CACHEMOD) && ($POSTFS); then
-  cp -af $INSTALLER/common/post-fs.sh $MODPATH/post-fs-data.sh
+  cp -af $INSTALLER/common/post-fs.sh $CACHEMODPATH/post-fs.sh
 fi
 
 # post-fs-data mode scripts
