@@ -1,4 +1,8 @@
 # ViPER4Android
 Support Link: http://forum.xda-developers.com/showthread.php?t=2191223
 
-Trying to get more compatibility for v4a. Still testing.
+Use tweaks on v4a-Magisk for more compatibility.
+
+1.deep_buffer and raw removal for more compatibility.
+2.Fix broken /system/vendor/etc/audio_effects.conf on OnePlus3Oxygen.
+3.Use "CACHEMOD=true" to setprops by modifying build.prop on demand.
