@@ -6,4 +6,4 @@ author=ViPER’s Audio
 description=Popular sound mod by ViPER’s Audio, ported to Magisk by topjohnwu, adapted by laggardkernel for more compatibility
 support=http://forum.xda-developers.com/showthread.php?t=2191223
 donate=http://vipersaudio.com/blog/?page_id=95
-cacheModule=false
+cacheModule=true
